# ArgonLang

./: .clang-format  .gitignore  AnalysisVisitor.md  CMakeLists.txt  EXPRESSION_PRECEDENCE.md  LICENSE  Makefile  README.md  TODO.txt  a.dot  ast.dot  in.arg  in.c  main.cpp  out.cpp  output.cpp  syntax.txt
docs/: README.md
examples/: 00_minimal.arg  00_simple_math.arg  01_basic_variables.arg  02_simple_functions.arg  03_control_flow.arg  04_classes_basic.arg  05_type_aliases_unions.arg  06_functional_programming.arg  07_pattern_matching.arg  08_memory_management.arg  09_traits_generics.arg  10_modules_imports.arg  11_error_handling.arg  12_comprehensive_test.arg  13_type_system_test.arg  14_simple_types.arg  15_variadic_test.arg  16_range_test.arg  17_range_comprehensive.arg  18_functional_operators.arg  23_simple_lambda.arg  24_single_lambda.arg  25_debug_lambda.arg  26_functional_with_parens.arg  28_test_map_pipe.arg  29_test_accumulate.arg  30_pattern_matching.arg  34_simple_advanced_patterns.arg  35_pattern_guards.arg  38_array_destructuring.arg  39_simple_destructuring.arg  40_struct_destructuring.arg  42_rest_destructuring.arg  44_compound_destructuring.arg  README.md
include/: AST.h  Parser.h  PrintVisitor.h  Tokenizer.h  Value.h  Visitor.h
include/Error/: Error.h  ErrorFormatter.h  MigrationGuide.md  Result.h
include/TranslationUnit/: TranslationUnitTokenizer.h
include/backend/: AST.h  Parser.h  Tokenizer.h
include/frontend/: AnalysisValue.h  AnalysisVisitor.h  CodeGenerationVisitor.h  Environment.h  PrintVisitor.h  Visitor.h
include/runtime/: ArgonRuntime.h
lib/: AST.cpp  Environment.cpp  Parser.cpp  PrintVisitor.cpp  Tokenizer.cpp  Value.cpp
src/: main.cpp
src/Error/: Error.cpp  Result.cpp
src/TranslationUnit/: TranslationUnitTokenizer.cpp
src/backend/: AST.cpp  Parser.cpp  Tokenizer.cpp
src/backend/AST/: AST.cpp  ConstructorsAST.cpp  GetNodeTypeAST.cpp
src/backend/AST/Debug/: PrintAST.cpp  ToDotAST.cpp
src/backend/Parser/: ExpressionsParser.cpp  Parser.cpp  StatementsParser.cpp  TypeParser.cpp
src/frontend/: AnalysisVisitor.cpp  CodeGenerationVisitor.cpp  Environment.cpp  PrintVisitor.cpp  Value.cpp
src/runtime/: ArgonRuntime.cpp
tests/: main_tests.cpp
tests/backend/: AST_tests.cpp  AnalysisValue.cpp  ArrayIndexing_tests.cpp  CodeGeneration_tests.cpp  Concepts_tests.cpp  Constraints_tests.cpp  ControlFlow_tests.cpp  Declarations_tests.cpp  Expressions_tests.cpp  GenericFunctionCalls_tests.cpp  Generics_tests.cpp  Integration_tests.cpp  IntersectionTypes_tests.cpp  Literals_tests.cpp  MemoryOwnership_tests.cpp  NegativeNumbers_tests.cpp  OOP_tests.cpp  ParallelExecution_tests.cpp  Parser_tests.cpp  PatternGuards_tests.cpp  PatternMatching_tests.cpp  StructTemplates_tests.cpp  Tokenizer_tests.cpp
